añadimos modulo clientes una previsualización queda codificar la lógica y mejorar diseño