@@ -16,6 +16,7 @@
     <junit.version>5.10.2</junit.version>
     <maven.compiler.release>21</maven.compiler.release>
     <javafx.version>23.0.1</javafx.version>
+    <javafx.platform>win</javafx.platform>
   </properties>
 
   <dependencies>
@@ -38,16 +39,31 @@
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>${javafx.version}</version>
+      <classifier>${javafx.platform}</classifier>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
+      <classifier>${javafx.platform}</classifier>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-web</artifactId>
       <version>${javafx.version}</version>
+      <classifier>${javafx.platform}</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <version>${javafx.version}</version>
+      <classifier>${javafx.platform}</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <version>${javafx.version}</version>
+      <classifier>${javafx.platform}</classifier>
     </dependency>
     <dependency>
       <groupId>org.controlsfx</groupId>
@@ -105,15 +121,41 @@
         <version>3.13.0</version>
         <configuration>
           <release>${maven.compiler.release}</release>
+          <useModulePath>true</useModulePath>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
-        <configuration>
-          <mainClass>com.example.pruebamongodbcss.PanelInicioMain</mainClass>
-        </configuration>
+        <executions>
+          <execution>
+            <id>default-cli</id>
+            <configuration>
+              <mainClass>com.example.pruebamongodbcss/com.example.pruebamongodbcss.PanelInicioMain</mainClass>
+              <options>
+                <option>--add-opens</option>
+                <option>java.base/java.lang.reflect=com.jfoenix</option>
+                <option>--add-opens</option>
+                <option>java.base/java.lang=com.jfoenix</option>
+                <option>--add-exports</option>
+                <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                <option>--add-exports</option>
+                <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                <option>--add-exports</option>
+                <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                <option>--add-opens</option>
+                <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
+                <option>--add-opens</option>
+                <option>javafx.controls/com.sun.javafx.scene.control=io.github.palexdev.materialfx</option>
+                <option>--add-exports</option>
+                <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                <option>--add-exports</option>
+                <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
+              </options>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
